--- a/src/main.html
+++ b/src/main.html
@@ -121,7 +121,7 @@
             const params = new URLSearchParams(location.search)
             const url = new URL(location.href)
             this.preview = document.getElementById('preview')
-            this.socketUrl = 'ws://localhost:3000/ws'
+            this.socketUrl = `ws://${url.host}/ws`
             this.title = document.getElementById('title')
             this.button = document.getElementById('button')
             this.shareButton = document.getElementById('share-link')
