--- a/src/watch.html
+++ b/src/watch.html
@@ -109,7 +109,7 @@
     </div>
     <div class="main">
         <ul class="room-list"></ul>
-        <video id="preview"></video>
+        <video id="preview" controls></video>
         <div class="message">
             <ul class="message-list"></ul>
             <form id="danmaku">
